fixed token again

--- a/discord_bot/.env
+++ b/discord_bot/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN = "NjkyMTE3MjA2MTA4MjA5MjUz.Xnqxsw.w_X_kQ4duMdgtyFu8gKaO29HYzk"
+BOT_TOKEN = NjkyMTE3MjA2MTA4MjA5MjUz.Xnqxsw.w_X_kQ4duMdgtyFu8gKaO29HYzk
