--- a/discord_bot/.env
+++ b/discord_bot/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN = NjkyMTE3MjA2MTA4MjA5MjUz.Xnq0jg.tyXqUtX-vQORWKYsHYHiO8fjXqA
+BOT_TOKEN = NjkyMTE3MjA2MTA4MjA5MjUz.Xnuj6g.PPU3aV1GLbLibVTz21Et7Cxve3c
