--- a/discord_bot/package.json
+++ b/discord_bot/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
+    "firebase-admin": "^8.10.0",
     "heroku": "^7.39.1",
     "nodemon": "^2.0.2"
   },
