--- a/discord_bot/.env
+++ b/discord_bot/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN = NjkyMTE3MjA2MTA4MjA5MjUz.Xnuj6g.PPU3aV1GLbLibVTz21Et7Cxve3c
+BOT_TOKEN = NjkyMTE3MjA2MTA4MjA5MjUz.Xnuyww.h7w6a_zfJDIGuNvvSCYTXeFCvmk
