--- a/discord_bot/.env
+++ b/discord_bot/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN = NjkyMTE3MjA2MTA4MjA5MjUz.Xnu-kQ.EI6v7X9Y7q8zB9OKgAXPrEoFw-I
+BOT_TOKEN = NjkyMTE3MjA2MTA4MjA5MjUz.XnvUpQ.4hJ8wFM7UWthgX_vFg-tKM2s574
