--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "node": "8"
   },
   "dependencies": {
+    "discord.js": "^12.0.2",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
   },
