--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "covid-19 arcgis in golang",
   "main": "index.js",
   "dependencies": {
-    "firebase": "^7.12.0"
+    "firebase": "^7.12.0",
+    "protobufjs": "^6.8.9"
   },
   "devDependencies": {},
   "scripts": {
