--- a/public/package.json
+++ b/public/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "public",
+  "name": "covidbot19-site",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
