--- a/firebase.json
+++ b/firebase.json
@@ -18,5 +18,18 @@
   "storage": {
     "rules": "storage.rules"
   },
-  "emulators": {}
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 5000
+    }
+  }
 }
