--- a/firebase.json
+++ b/firebase.json
@@ -18,5 +18,10 @@
   "storage": {
     "rules": "storage.rules"
   },
-  "emulators": {}
+  "emulators": {},
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
+  }
 }
