--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,8 @@
   "hosting": {
     "public": "public",
     "site": "covidbot19",
+    "cleanUrls": true,
+      "trailingSlash": false,
     "ignore": [
       "firebase.json",
       "**/.*",
