--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "covid-19 arcgis in golang",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "firebase": "^7.13.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.5.0",
