--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "firebase": "^7.13.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.5.0",
+    "firebase-tools": "^7.16.1",
+    "google-protobuf": "^3.11.4",
     "lint": "^0.7.0",
     "protobufjs": "^6.8.9"
   },
