--- a/discord_bot/package.json
+++ b/discord_bot/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bufferutil": "^4.0.1",
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
     "firebase-admin": "^8.10.0",
