--- a/discord_bot/package.json
+++ b/discord_bot/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "dependencies": {
     "bufferutil": "^4.0.1",
-    "discord.js": "^12.0.2",
+    "discord.js": "^10.5.0",
     "dotenv": "^8.2.0",
+    "firebase": "^7.13.1",
     "firebase-admin": "^8.10.0",
     "heroku": "^7.39.1",
     "nodemon": "^2.0.2"
