--- a/discord_bot/package.json
+++ b/discord_bot/package.json
@@ -10,7 +10,9 @@
     "firebase": "^7.13.1",
     "firebase-admin": "^8.10.0",
     "heroku": "^7.39.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "protocol-buffers": "^4.1.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
