--- a/discord_bot/package.json
+++ b/discord_bot/package.json
@@ -12,7 +12,8 @@
     "heroku": "^7.39.1",
     "nodemon": "^2.0.2",
     "protocol-buffers": "^4.1.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "wait.for-es6": "^0.1.0"
   },
   "devDependencies": {},
   "scripts": {
