--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "covid-19 arcgis in golang",
   "main": "index.js",
   "dependencies": {
+    "chart.js": "^2.9.3",
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
