--- a/public/package.json
+++ b/public/package.json
@@ -4,14 +4,17 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node script.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "commonjs": "0.0.1",
+    "discord.io": "^2.5.3",
+    "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
-    "firebase": "^7.12.0",
+    "dotenv-webpack": "^1.7.0",
+    "firebase": "^7.13.1",
     "require": "^2.4.20"
   },
   "devDependencies": {},
