--- a/public/package.json
+++ b/public/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.13.1",
+    "fs": "0.0.1-security",
+    "protobufjs": "^6.8.9",
     "require": "^2.4.20"
   },
   "devDependencies": {},
