--- a/public/package.json
+++ b/public/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.13.1",
     "fs": "0.0.1-security",
     "protobufjs": "^6.8.9",
+    "request": "^2.88.2",
     "require": "^2.4.20"
   },
   "devDependencies": {},
