--- a/public/package.json
+++ b/public/package.json
@@ -13,13 +13,15 @@
     "discord.io": "^2.5.3",
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^1.7.0",
     "firebase": "^7.13.1",
     "fs": "0.0.1-security",
     "protobufjs": "^6.8.9",
     "request": "^2.88.2",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "webpack": "^4.42.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv-webpack": "^1.7.0"
+  },
   "description": ""
 }
